--- a/기록/0522/shin/프로젝트.md
+++ b/기록/0522/shin/프로젝트.md
@@ -4,7 +4,7 @@ Date: 2023년 5월 22일
 이번주: Yes
 즐겨찾기: No
 
-CSS 레이아웃 배치 변경 : 상하 → 좌우로
+1. CSS 레이아웃 배치 변경 : 상하 → 좌우로
 
 마커 안정화 및 인포윈도우, 이벤트 트리거 설정(완료)
 
@@ -14,12 +14,16 @@ CSS 레이아웃 배치 변경 : 상하 → 좌우로
 
 ‘여행 경로 설정’ 페이지 추가 및 우클릭으로 여행 정보 추가 가능
 
-우클릭으로 여행 경로 탭일 경우 이벤트 추가 가능
+2. 우클릭으로 여행 경로 탭일 경우 이벤트 추가 가능
 
 해당 마커의 정보를 저장할 배열 `myRoute` 존재. 해당 값에는 attInfo로 받은 정보가 저장된다.
 
 ⇒ 무슨 짓을 해도 반복문 마지막의 인덱스와 넘버링으로 넘어가서, (마커를 반복문으로 생성하니, 이벤트를 실행하면 마지막 이벤트 기점으로 실행되게 된다.
 
-마커의 좌표 정보 `marker.getPosition()`를 가져와서 이를 기반으로 값을 찾아오게 했다.
+마커의 좌표 정보 `marker.getPosition()`를 가져와서 이를 기반으로 BE 서버에서 쿼리를 통해 값을 찾아오게 했다.
+
 
 ![Untitled](%E1%84%91%E1%85%B3%E1%84%85%E1%85%A9%E1%84%8C%E1%85%A6%E1%86%A8%E1%84%90%E1%85%B3%20a217fc2959e544fbae1d0aa94d7d92a9/Untitled%202.png)
+
+3. 전체적인 코드 재정리 및 css 설정
+css 틀 생성, kakaoMap 코드 재정리
